fixtures/cell_env/invalid/01_unknown_profile.sea
Cell "BadProfile"
    @profile "nonexistent-v1"
